--- a/minv/inventory/templates/inventory/base.html
+++ b/minv/inventory/templates/inventory/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load inventory_extras %}
 <html>
 <head>
   {% block head %}
@@ -6,16 +7,18 @@
   <link rel="stylesheet" href="{% static 'inventory/css/bootstrap-theme.min.css' %}">
   <script src="{% static 'inventory/js/jquery-2.1.4.min.js' %}"></script>
   <script src="{% static 'inventory/js/bootstrap.min.js' %}"></script>
+  <script src="{% static 'inventory/js/inventory.js' %}"></script>
 
   <link rel="stylesheet" href="{% static 'inventory/css/bootstrap-datepicker3.min.css' %}">
-<script src="{% static 'inventory/js/bootstrap-datepicker.min.js' %}"></script>
+  <script src="{% static 'inventory/js/bootstrap-datepicker.min.js' %}"></script>
+  <link rel="stylesheet" href="{% static 'inventory/css/styles.css' %}">
   {% endblock %}
 </head>
 <body>
   <nav class="navbar navbar-default navbar-inverse navbar-static-top">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-navbar-collapse" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -23,7 +26,7 @@
         </button>
         <a class="navbar-brand" href="{% url 'inventory:collection-list' %}">MInv</a>
       </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <div class="collapse navbar-collapse" id="top-navbar-collapse">
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Collections <span class="caret"></span></a>
@@ -40,6 +43,13 @@
     </div>
   </nav>
   <div class="container">
+    {% for message in messages %}
+      <div class="alert alert-{% if message.level_tag == 'error' %}danger{% else %}{{ message.level_tag }}{% endif %}" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <strong>{{ message.level_tag|capfirst }}:</strong> {{ message.message }}
+      </div>
+    {% endfor %}
+
     {% block content %}
     {% endblock %}
   </div>
