--- a/minv/inventory/templates/inventory/collection_detail.html
+++ b/minv/inventory/templates/inventory/collection_detail.html
@@ -1,14 +1,32 @@
-{% extends "inventory/base.html" %}
+{% extends "inventory/collection_base.html" %}
 
 {% block head %}
 {{ block.super }}
 {{ search_form.media }}
 {% endblock %}
 
+{% block collection_content %}
 
-{% block content %}
-
-<h1>Collection {{ collection.mission }} ({{ collection.file_type }})</h1>
-
+<form method="get" action="{% url 'inventory:collection-harvest' mission=collection.mission file_type=collection.file_type %}">
+  <div class="panel panel-default">
+    <div class="panel-heading">Locations</div>
+    <table class="table table-striped table-condensed">
+      <tr>
+        <th>URL</th>
+        <th>Type</th>
+        <th style="text-align: center;">Harvest?</th>
+      </tr>
+      {% for location in collection.locations.all %}
+      <tr>
+        <td>{{ location.url }}</td>
+        <td >{{ location.get_location_type_display }}</td>
+        <td style="text-align: center;"><input type="checkbox" name="url" value="{{ location.url }}"></td>
+      </tr>
+      {% endfor %}
+    </table>
+  </div>
+  <button type="submit" class="btn btn-default">Harvest</button>
+</form>
 
 {% endblock %}
+
