Further developed GUI. Added user authorization. Added root view.

--- a/minv/inventory/templates/inventory/collection_base.html
+++ b/minv/inventory/templates/inventory/collection_base.html
@@ -28,6 +28,7 @@
         <li {% if current == "alignment" %}class="active"{% endif %}><a href="{% url 'inventory:collection-alignment' mission=collection.mission file_type=collection.file_type %}">Alignment{% if current == "alignment" %}<span class="sr-only">(current)</span>{% endif %}</a></li>
         <li {% if current == "export" %}class="active"{% endif %}><a href="{% url 'inventory:collection-export' mission=collection.mission file_type=collection.file_type %}">Export{% if current == "export" %}<span class="sr-only">(current)</span>{% endif %}</a></li>
         <li {% if current == "import" %}class="active"{% endif %}><a href="{% url 'inventory:collection-import' mission=collection.mission file_type=collection.file_type %}">Import{% if current == "import" %}<span class="sr-only">(current)</span>{% endif %}</a></li>
+        <li {% if current == "configuration" %}class="active"{% endif %}><a href="{% url 'inventory:collection-configuration' mission=collection.mission file_type=collection.file_type %}">Configuration{% if current == "configuration" %}<span class="sr-only">(current)</span>{% endif %}</a></li>
         <li><a href="{% url 'admin:inventory_collection_change' collection.id %}">Admin</a></li>
       </ul>
     </div>
