--- a/minv/inventory/templates/inventory/base.html
+++ b/minv/inventory/templates/inventory/base.html
@@ -24,7 +24,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{% url 'inventory:collection-list' %}">MInv</a>
+        <a class="navbar-brand" href="{% url 'inventory:root' %}">MInv</a>
       </div>
       <div class="collapse navbar-collapse" id="top-navbar-collapse">
       <ul class="nav navbar-nav">
@@ -39,6 +39,11 @@
           </ul>
         </li>
         <li><a href="{% url 'inventory:task-monitor' %}">Monitor</a></li>
+        <li><a href="{% url 'admin:index' %}">Admin</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a>Logged in as {{ user }}</a></li>
+        <li><a href="{% url 'inventory:logout' %}">Logout</a></li>
       </ul>
     </div>
   </nav>
