Added BBox select for area

--- a/minv/inventory/templates/inventory/collection_search.html
+++ b/minv/inventory/templates/inventory/collection_search.html
@@ -1,8 +1,10 @@
 {% extends "inventory/collection_base.html" %}
+{% load staticfiles%}
 
 {% block head %}
+<script src="{% static 'inventory/js/ol.js' %}"></script>
+<link rel="stylesheet" href="{% static 'inventory/css/ol.css' %}">
 {{ block.super }}
-{{ search_form.media }}
 {% endblock %}
 
 
@@ -31,6 +33,24 @@
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <button type="submit" class="btn btn-default">Search</button>
+        </div>
+      </div>
+      <div class="form-group {% if field.errors %}has-error{% endif %}">
+        <label class="col-sm-2 control-label">Area:</label>
+        <div class="input-group col-sm-8">
+          <div data-map="area"></div>
+          <div class="input-group">
+            <input type="text" role="minlat" class="form-control input-sm">
+            <span class="input-group-addon">-</span>
+            <input type="text" role="minlon" class="form-control input-sm">
+            <span class="input-group-addon">-</span>
+            <input type="text" role="maxlat" class="form-control input-sm">
+            <span class="input-group-addon">-</span>
+            <input type="text" role="maxlon" class="form-control input-sm">
+            <span class="input-group-btn">
+              <button class="btn btn-default btn-sm" type="button" role="clear-button">Clear</button>
+            </span>
+          </div>
         </div>
       </div>
       {% for field in search_form %}
