--- a/minv/inventory/static/inventory/css/styles.css
+++ b/minv/inventory/static/inventory/css/styles.css
@@ -10,3 +10,57 @@
 .nav-tabs {
     margin-bottom: 0;
 }
+
+[data-map] {
+    width: 100%;
+    height: 500px;
+    background-color: #eee;
+    overflow: hidden;
+    border-top: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    border-left: 1px solid #ccc;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+
+[data-map] canvas {
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+[data-map] + div input, [data-map] + div button {
+    border-top-right-radius: 0px;
+    border-top-left-radius: 0px;
+}
+
+.enable-draw-control {
+  top: .5em;
+  right: .5em;
+}
+
+.ol-control div {
+  display: block;
+  margin: 1px;
+  padding: 0;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  padding-top: 3px;
+  color: white;
+  font-size: 1.0em;
+  font-weight: bold;
+  text-decoration: none;
+  text-align: center;
+  /*height: 1.375em;*/
+  /*line-height: .4em;*/
+  background-color: #7b98bc;
+  background-color: rgba(0,60,136,0.5);
+  border: none;
+  border-radius: 2px;
+}
+
+.ol-control div input[type="checkbox"] {
+  margin-left: 5px;
+  top: -2px;
+  position: relative;
+  vertical-align: bottom;
+}
