Moving monitor and inventory packages to minv package.

--- a/minv/minv/inventory/templates/inventory/collection_search.html
+++ b/minv/minv/inventory/templates/inventory/collection_search.html
@@ -40,13 +40,13 @@
         <div class="input-group col-sm-8">
           <div data-map="area"></div>
           <div class="input-group">
-            <input type="text" role="minlat" class="form-control input-sm">
+            <input type="text" name="minlat" class="form-control input-sm">
             <span class="input-group-addon">-</span>
-            <input type="text" role="minlon" class="form-control input-sm">
+            <input type="text" name="minlon" class="form-control input-sm">
             <span class="input-group-addon">-</span>
-            <input type="text" role="maxlat" class="form-control input-sm">
+            <input type="text" name="maxlat" class="form-control input-sm">
             <span class="input-group-addon">-</span>
-            <input type="text" role="maxlon" class="form-control input-sm">
+            <input type="text" name="maxlon" class="form-control input-sm">
             <span class="input-group-btn">
               <button class="btn btn-default btn-sm" type="button" role="clear-button">Clear</button>
             </span>
