Fixes for Django 1.6. Adding Breadcrumbs for Monitor, Home and collection list. Using container-fluid instead of container for top-level container.

--- a/minv/minv/inventory/templates/inventory/collection_base.html
+++ b/minv/minv/inventory/templates/inventory/collection_base.html
@@ -42,7 +42,7 @@
 
 {% block collection_footer %}
 <ol class="breadcrumb">
-  <li><a href="/">Home</a></li>
+  <li><a href="{% url 'inventory:root' %}">Home</a></li>
   <li><a href="{% url 'inventory:collection-list' %}">Collections</a></li>
   {% if not current %}<li class="active">{{ collection }}</li>
   {% else %}
