--- a/minv/minv/inventory/templates/inventory/root.html
+++ b/minv/minv/inventory/templates/inventory/root.html
@@ -11,4 +11,8 @@
   <li><a href="{% url 'admin:index' %}">Admin</a></li>
 </ul>
 
+<ol class="breadcrumb">
+  <li class="active">Home</li>
+</ol>
+
 {% endblock %}
