--- a/minv/minv/inventory/templates/inventory/base.html
+++ b/minv/minv/inventory/templates/inventory/base.html
@@ -47,7 +47,7 @@
       </ul>
     </div>
   </nav>
-  <div class="container">
+  <div class="container-fluid">
     {% for message in messages %}
       <div class="alert alert-{% if message.level_tag == 'error' %}danger{% else %}{{ message.level_tag }}{% endif %}" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
