--- a/minv/minv/inventory/templates/inventory/task_monitor.html
+++ b/minv/minv/inventory/templates/inventory/task_monitor.html
@@ -42,6 +42,9 @@
   {% endfor %}
 </table>
 
-
+<ol class="breadcrumb">
+  <li><a href="{% url 'inventory:root' %}">Home</a></li>
+  <li class="active">Monitor</li>
+</ol>
 
 {% endblock %}
