--- a/minv/minv/inventory/templates/inventory/base.html
+++ b/minv/minv/inventory/templates/inventory/base.html
@@ -49,9 +49,9 @@
   </nav>
   <div class="container-fluid">
     {% for message in messages %}
-      <div class="alert alert-{% if message.level_tag == 'error' %}danger{% else %}{{ message.level_tag }}{% endif %}" role="alert">
+      <div class="alert alert-{% if 'error' in message.tags %}danger{% else %}{{ message.tags }}{% endif %}" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <strong>{{ message.level_tag|capfirst }}:</strong> {{ message.message }}
+        <strong>{{ message.tags|capfirst }}:</strong> {{ message.message }}
       </div>
     {% endfor %}
 
