Extracting rendering of forms in own template. Adding views for Backup and Restore.

--- a/minv/minv/inventory/templates/inventory/collection_configuration.html
+++ b/minv/minv/inventory/templates/inventory/collection_configuration.html
@@ -1,4 +1,5 @@
 {% extends "inventory/collection_base.html" %}
+{% load inventory_extras %}
 
 {% block head %}
 {{ block.super }}
@@ -16,47 +17,31 @@
 {% block collection_content %}
 
 <form action="" method="post" class="form-horizontal">
-{% csrf_token %}
+  {% csrf_token %}
+  {% render_form configuration_form %}
 
-{% for field in configuration_form %}
+  {{ mapping_formset.management_form }}
+
   <div class="form-group {% if field.errors %}has-error{% endif %}">
-    <label for="{{ field.id_for_label }}" class="col-sm-2 control-label">{{ field.label_tag }}</label>
+    <label class="col-sm-2 control-label">Metadata Mapping:</label>
     <div class="input-group col-sm-8">
-      {{ field }}
-      {% if not field.field.choices %}
-      <span class="input-group-btn">
-        <button class="btn btn-default btn-sm" type="button" role="clear-button">Clear</button>
-      </span>
-      {% endif %}
+      {% for form in mapping_formset %}
+        <ul>
+          <li>{{ form.index_file_key }}</li>
+          <li>{{ form.search_key }}</li>
+          {% if formset.can_delete %}
+              <li>{{ form.DELETE }}</li>
+          {% endif %}
+        </ul>
+      {% endfor %}
     </div>
-    {% for error in field.errors %}
-      <span class="help-block col-sm-offset-2">{{ error }}</span>
-    {% endfor %}
   </div>
-{% endfor %}
 
-{{ mapping_formset.management_form }}
-
-<div class="form-group {% if field.errors %}has-error{% endif %}">
-  <label class="col-sm-2 control-label">Metadata Mapping:</label>
-  <div class="input-group col-sm-8">
-    {% for form in mapping_formset %}
-      <ul>
-        <li>{{ form.index_file_key }}</li>
-        <li>{{ form.search_key }}</li>
-        {% if formset.can_delete %}
-            <li>{{ form.DELETE }}</li>
-        {% endif %}
-      </ul>
-    {% endfor %}
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Save</button>
+    </div>
   </div>
-</div>
-
-<div class="form-group">
-  <div class="col-sm-offset-2 col-sm-10">
-    <button type="submit" class="btn btn-default">Save</button>
-  </div>
-</div>
 </form>
 
 {% endblock %}
