--- a/minv/minv/inventory/templates/inventory/base.html
+++ b/minv/minv/inventory/templates/inventory/base.html
@@ -39,6 +39,8 @@
           </ul>
         </li>
         <li><a href="{% url 'inventory:task-monitor' %}">Monitor</a></li>
+        <li><a href="{% url 'inventory:backup' %}">Backup</a></li>
+        <li><a href="{% url 'inventory:restore' %}">Restore</a></li>
         <li><a href="{% url 'admin:index' %}">Admin</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
