--- a/minv/minv/inventory/templates/inventory/collection_import.html
+++ b/minv/minv/inventory/templates/inventory/collection_import.html
@@ -1,5 +1,5 @@
 {% extends "inventory/collection_base.html" %}
-
+{% load inventory_extras %}
 {% block head %}
 {{ block.super }}
 {{ search_form.media }}
@@ -17,22 +17,7 @@
 
 <form action="{% url 'inventory:collection-import' mission=collection.mission file_type=collection.file_type %}" method="post" class="form form-horizontal">
   {% csrf_token %}
-  {% for field in form %}
-  <div class="form-group {% if field.errors %}has-error{% endif %}">
-    <label for="{{ field.id_for_label }}" class="col-sm-2 control-label">{{ field.label_tag }}</label>
-    <div class="input-group col-sm-8">
-      {{ field }}
-      {% if not field.field.choices %}
-      <span class="input-group-btn">
-        <button class="btn btn-default btn-sm" type="button" role="clear-button">Clear</button>
-      </span>
-      {% endif %}
-    </div>
-    {% for error in field.errors %}
-      <span class="help-block col-sm-offset-2">{{ error }}</span>
-    {% endfor %}
-  </div>
-  {% endfor %}
+  {% render_form form %}
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <button type="submit" class="btn btn-default">Import</button>
