--- a/minv/minv/inventory/templates/inventory/root.html
+++ b/minv/minv/inventory/templates/inventory/root.html
@@ -8,6 +8,8 @@
 <ul>
   <li><a href="{% url 'inventory:collection-list' %}">Collection List</a></li>
   <li><a href="{% url 'inventory:task-monitor' %}">Monitor</a></li>
+  <li><a href="{% url 'inventory:backup' %}">Backup</a></li>
+  <li><a href="{% url 'inventory:restore' %}">Restore</a></li>
   <li><a href="{% url 'admin:index' %}">Admin</a></li>
 </ul>
 
