Adding task view. Renamed task monitor url/template.

--- a/minv/minv/inventory/templates/inventory/base.html
+++ b/minv/minv/inventory/templates/inventory/base.html
@@ -38,7 +38,7 @@
             {% endfor %}
           </ul>
         </li>
-        <li><a href="{% url 'inventory:task-monitor' %}">Monitor</a></li>
+        <li><a href="{% url 'inventory:task-list' %}">Monitor</a></li>
         <li><a href="{% url 'inventory:backup' %}">Backup</a></li>
         <li><a href="{% url 'inventory:restore' %}">Restore</a></li>
         <li><a href="{% url 'admin:index' %}">Admin</a></li>
