--- a/minv/minv/inventory/templates/inventory/task_list.html
+++ b/minv/minv/inventory/templates/inventory/task_list.html
@@ -10,7 +10,7 @@
 <h1>Task Monitor</h1>
 
 <nav class="navbar navbar-default">
-  <form method="post" action="{% url 'inventory:task-monitor' %}" class="navbar-form navbar-left" role="search">
+  <form method="post" action="{% url 'inventory:task-list' %}" class="navbar-form navbar-left" role="search">
     {% csrf_token %}
     <div class="form-group">
       <label class="control-label" for="{{ filter_form.status.id_for_label }}">{{ filter_form.status.label_tag }}</label>
@@ -22,7 +22,6 @@
 
 <table class="table table-hover table-condensed table-bordered table-striped">
   <tr>
-    <th>ID</th>
     <th>Name</th>
     <th>Start time</th>
     <th>End time</th>
@@ -31,8 +30,7 @@
   </tr>
   {% for task in tasks %}
   <tr>
-    <td>{{ task.id }}</td>
-    <td>{{ task.name }}</td>
+    <td><a href="{% url 'inventory:task' task_id=task.id %}">{{ task.name }}</a></td>
     <td>{{ task.start_time|date:'Y-m-d H:i' }}</td>
     <td>{{ task.end_time|date:'Y-m-d H:i' }}</td>
     <td>{% if task.run_time %}{{ task.run_time }}{% else %}-{% endif %}</td>
