Fixing templates: rendering on mobile devices, hidden forms and a bug in the root view.

--- a/minv/minv/inventory/templates/inventory/extra/form.html
+++ b/minv/minv/inventory/templates/inventory/extra/form.html
@@ -1,4 +1,7 @@
-{% for field in form %}
+{% for field in form.hidden_fields %}
+  {{ field }}
+{% endfor %}
+{% for field in form.visible_fields %}
   <div class="form-group {% if field.errors %}has-error{% endif %}">
     <label for="{{ field.id_for_label }}" class="col-sm-2 control-label">{{ field.label_tag }}</label>
     <div class="input-group col-sm-8">
@@ -13,4 +16,4 @@
       <span class="help-block col-sm-offset-2">{{ error }}</span>
     {% endfor %}
   </div>
-  {% endfor %}
+{% endfor %}
