--- a/minv/minv/inventory/templates/inventory/base.html
+++ b/minv/minv/inventory/templates/inventory/base.html
@@ -2,6 +2,7 @@
 {% load inventory_extras %}
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   {% block head %}
   <link rel="stylesheet" href="{% static 'inventory/css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'inventory/css/bootstrap-theme.min.css' %}">
