Improving templates: marking current section as 'active'.

--- a/minv/minv/inventory/templates/inventory/collection/base.html
+++ b/minv/minv/inventory/templates/inventory/collection/base.html
@@ -4,6 +4,11 @@
 {{ block.super }}
 {% endblock %}
 
+{% block navbar %}
+{% with "collections" as current %}
+{{ block.super }}
+{% endwith %}
+{% endblock %}
 
 {% block content %}
 {% block collection_header %}
