--- a/minv/minv/inventory/templates/inventory/collection/list.html
+++ b/minv/minv/inventory/templates/inventory/collection/list.html
@@ -5,6 +5,11 @@
 {{ search_form.media }}
 {% endblock %}
 
+{% block navbar %}
+{% with "collections" as current %}
+{{ block.super }}
+{% endwith %}
+{% endblock %}
 
 {% block content %}
 
