--- a/minv/minv/inventory/templates/inventory/base.html
+++ b/minv/minv/inventory/templates/inventory/base.html
@@ -15,7 +15,9 @@
   <link rel="stylesheet" href="{% static 'inventory/css/styles.css' %}">
   {% endblock %}
 </head>
+
 <body>
+  {% block navbar %}
   <nav class="navbar navbar-default navbar-inverse navbar-static-top">
     <div class="container">
       <div class="navbar-header">
@@ -29,7 +31,7 @@
       </div>
       <div class="collapse navbar-collapse" id="top-navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="dropdown">
+        <li class="dropdown{% if current == 'collections' %} active{% endif %}">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Collections <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="{% url 'inventory:collection-list' %}">All</a></li>
@@ -39,9 +41,9 @@
             {% endfor %}
           </ul>
         </li>
-        <li><a href="{% url 'inventory:task-list' %}">Monitor</a></li>
-        <li><a href="{% url 'inventory:backup' %}">Backup</a></li>
-        <li><a href="{% url 'inventory:restore' %}">Restore</a></li>
+        <li {% if current == "monitor" %}class="active"{% endif %}><a href="{% url 'inventory:task-list' %}">Monitor</a></li>
+        <li {% if current == "backup" %}class="active"{% endif %}><a href="{% url 'inventory:backup' %}">Backup</a></li>
+        <li {% if current == "restore" %}class="active"{% endif %}><a href="{% url 'inventory:restore' %}">Restore</a></li>
         <li><a href="{% url 'admin:index' %}">Admin</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -50,6 +52,7 @@
       </ul>
     </div>
   </nav>
+  {% endblock %}
   <div class="container-fluid">
     {% for message in messages %}
       <div class="alert alert-{% if 'error' in message.tags %}danger{% else %}{{ message.tags }}{% endif %}" role="alert">
