--- a/minv/minv/inventory/static/inventory/css/styles.css
+++ b/minv/minv/inventory/static/inventory/css/styles.css
@@ -11,6 +11,16 @@
     margin-bottom: 0;
 }
 
+/* fixing horizontal forms */
+.form-horizontal .form-group {
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
+.form-group {
+    margin-bottom: 10px;
+}
+
 [data-map] {
     width: 100%;
     height: 500px;
