--- a/minv/minv/inventory/templates/inventory/collection/export.html
+++ b/minv/minv/inventory/templates/inventory/collection/export.html
@@ -16,7 +16,7 @@
 
 {% block collection_content %}
 
-<form action="{% url 'inventory:collection-export' mission=collection.mission file_type=collection.file_type %}" method="post" class="form form-horizontal">
+<form action="{% url 'inventory:collection:export' mission=collection.mission file_type=collection.file_type %}" method="post" class="form form-horizontal">
   {% csrf_token %}
   {% render_form form %}
   <div class="form-group">
