--- a/minv/minv/inventory/templates/inventory/collection/list.html
+++ b/minv/minv/inventory/templates/inventory/collection/list.html
@@ -17,7 +17,7 @@
 
 <ul>
 {% for collection in collections %}
-    <li><a href="{% url 'inventory:collection-detail' mission=collection.mission file_type=collection.file_type %}">{{ collection.mission }}/{{ collection.file_type }}</a></li>
+    <li><a href="{% url 'inventory:collection:detail' mission=collection.mission file_type=collection.file_type %}">{{ collection.mission }}/{{ collection.file_type }}</a></li>
 {% endfor %}
 </ul>
 
