--- a/minv/minv/inventory/templates/inventory/collection/search.html
+++ b/minv/minv/inventory/templates/inventory/collection/search.html
@@ -26,7 +26,7 @@
   </li>
 </ul>
 
-<form action="{% url 'inventory:collection-search' mission=collection.mission file_type=collection.file_type %}" method="post" class="form-horizontal">
+<form action="{% url 'inventory:collection:search' mission=collection.mission file_type=collection.file_type %}" method="post" class="form-horizontal">
   {% csrf_token %}
 
   <div class="tab-content">
