--- a/minv/minv/inventory/templates/inventory/root.html
+++ b/minv/minv/inventory/templates/inventory/root.html
@@ -6,7 +6,7 @@
 
 
 <ul>
-  <li><a href="{% url 'inventory:collection-list' %}">Collection List</a></li>
+  <li><a href="{% url 'inventory:collection:list' %}">Collection List</a></li>
   <li><a href="{% url 'inventory:task-list' %}">Monitor</a></li>
   <li><a href="{% url 'inventory:backup' %}">Backup</a></li>
   <li><a href="{% url 'inventory:restore' %}">Restore</a></li>
