--- a/minv/inventory/templates/inventory/login.html
+++ b/minv/inventory/templates/inventory/login.html
@@ -14,6 +14,11 @@
       <input type="hidden" name="next" value="{{ next }}" />
     {% endif %}
       <h2 class="form-signin-heading">Please log in</h2>
+      {% if login_error %}
+      <div class="alert alert-danger" role="alert">
+        <b>Login failed!</b> Please enter the correct username and password for a valid account. Note that both fields may be case-sensitive.
+      </div>
+      {% endif %}
       <label for="inputEmail" class="sr-only">Email address</label>
       <input type="username" name="username" id="username" class="form-control" placeholder="Username" required autofocus>
       <label for="inputPassword" class="sr-only">Password</label>
